Fix misaligned event card
The Vivid Sydney 2024 event card no longer leaves an empty space below
it, which was caused by the large size of its image. All events are now
spaced using a small script, meaning they're now flush with the right 
margin of the page.

--- a/styles/events.css
+++ b/styles/events.css
@@ -11,10 +11,10 @@ p {
 
 .event {
     float: left;
-    width: 47.5%;
-    margin-right: 2.5%;
+    width: 48.5%;
     pointer-events: none;
     margin-bottom: -7rem;
+    overflow: hidden;
 }
 
 .event a {
